--- a/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="id">
 <head>
 <meta charset="UTF-8" />
@@ -156,7 +156,17 @@ let soal = [
     { q: "Kata tanya siapa digunakan untuk menanyakan …", 
       a: ["Waktu kejadian", "Tokoh yang terlibat", "Tempat peristiwa", "Penyebab peristiwa"], k: 1 },
     { q: "Contoh kalimat dengan kata tanya siapa adalah …", 
-      a: ["Siapa yang datang bersama Hani?", "Siapa Heri duduk?", "Siapa kegiatan mereka?", "Siapa mereka senang?"], k: 0 }
+      a: ["Siapa yang datang bersama Hani?", "Siapa Heri duduk?", "Siapa kegiatan mereka?", "Siapa mereka senang?"], k: 0 },
+    { q: "Kalimat yang berisi gagasan utama disebut …", 
+      a: ["Kalimat penjelas", "Kalimat ajakan", "Kalimat utama", "Kalimat tanya"], k: 2 },
+    { q: "Kata tanya kapan digunakan untuk menanyakan …", 
+      a: ["Sebab", "Tempat", "Waktu", "Cara"], k: 2 },
+    { q: "Untuk menemukan ide pokok, kamu harus …", 
+      a: ["Melihat gambar", "Membaca judul teks", "Membaca dan memahami isi teks", "Menghafal semua kalimat"], k: 2 },
+    { q: "Kata tanya \"adiksimba\" merupakan singkatan dari …", 
+      a: ["Apa, di mana, kapan, siapa, dan bagaimana", "Apa, di mana, kapan, siapa, mengapa, dan bagaimana", "Apa, siapa, kapan, jumlah", "Adik, Simbah, dan Bapak"], k: 1 },
+    { q: "Ide pokok terletak pada …", 
+      a: ["Kalimat penjelas", "Kalimat utama", "Judul", "Kata tanya"], k: 1 }
 ];
 
 // data siswa
